# fastapi-products

./: .env.example  alembic.ini  docker-compose.yml  hello.py  pyproject.toml
app/: config.py  main.py
app/categories/: schemas.py
app/categories/uses_cases/: category_use_cases.py
app/database/: models.py
migrations/: env.py
migrations/versions/: c4c9e5050411_create_categories_table.py  d7f927bc8c39_add_created_at_and_updated_at_columns_.py
tests/: conftest.py
tests/categories/: test_category_schema.py  test_category_use_cases.py  test_schemas.py
