[project]
name = "fastapi-products"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.5",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.1",
    "pytest>=8.3.3",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.36",
]
